@@ -1,3 +1,14 @@
+2008-04-23  John W. Eaton  <jwe@octave.org>
+
+	* lex.l (text_yyinput): New function.  Use it in place of yyinput.
+	(next_token_is_sep_op, scan_for_comments, eat_whitespace,
+	have_continuation): No need to check for CR or CRLF.
+	* parse.y (text_getc): Also return NL for single CR.
+
+2008-04-32  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* input.cc (get_input_from_file): Open file in binary mode.
+
 2008-04-20  John W. Eaton  <jwe@octave.org>
 
 	* oct-stream.cc (octave_stream::read): Allow single data type
